--- a/IFS-NakulPanchal-HTML.html
+++ b/IFS-NakulPanchal-HTML.html
@@ -23,6 +23,10 @@
     </header>
 
     <main>
+      <div class="circle circle1"></div>
+      <div class="circle circle2"></div>
+
+
       <!-- Hero section -->
       <section id="home" class="hero">
         <div class="hero-content">
