feature: attached links to the nav button

--- a/IFS-NakulPanchal-HTML.html
+++ b/IFS-NakulPanchal-HTML.html
@@ -15,9 +15,9 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Blog</a></li>
-          <li><a href="#contact">Contact us</a></li>
+          <li><a href="#view-cards">Services</a></li>
+          <li><a href="#info-section-1">Blog</a></li>
+          <li><a href="#contact-section">Contact us</a></li>
         </ul>
       </nav>
     </header>
@@ -42,8 +42,8 @@
             projects e build and develop mobile applications for several top
             platforms, including Android & JOS.
           </p>
-          <button>Contact us</button>
-          <button>View more</button>
+          <button href="#contact-section">Contact us</button>
+          <button href="#view-cards">View more</button>
         </div>
         <img src="wep-page-img/banner.png" alt="Hero Image" />
       </section>
