Fix: changes in title

--- a/IFS-NakulPanchal-HTML.html
+++ b/IFS-NakulPanchal-HTML.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Nakul Panchal - IFS Officer</title>
+    <title>Nakul Panchal - IFS</title>
     <link rel="stylesheet" href="IFS-NakulPanchal-Style.css" />
     <link
       rel="stylesheet"
